Fixed a spacing issue on Resume page

--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ footer {
   margin-left:auto;
   margin-right:auto;
   width: 850px;
-  height: 1700px;
+  height: 1800px;
   margin-bottom: 1em;
 }
 .title {
